Add vendor logo at beginning of animation

--- a/installer/cactus-install-animation/cactusinstallanimationwindow.ui
+++ b/installer/cactus-install-animation/cactusinstallanimationwindow.ui
@@ -105,6 +105,7 @@
         <property name="currentIndex">
          <number>0</number>
         </property>
+        <widget class="QWidget" name="blankPage"/>
         <widget class="QWidget" name="installingPage">
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
