--- a/installer/cactus-install-animation/cactusinstallanimationwindow.ui
+++ b/installer/cactus-install-animation/cactusinstallanimationwindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string notr="true">Dialog</string>
+   <string notr="true">Installation Animation</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
@@ -135,7 +135,6 @@
              <widget class="QLabel" name="label_2">
               <property name="font">
                <font>
-                <weight>75</weight>
                 <bold>true</bold>
                </font>
               </property>
